# fast-hash

./: Cargo.toml  README.md
fast-hash/: Cargo.toml
fast-hash-macros/: Cargo.toml  README.md
fast-hash-macros/src/: lib.rs
fast-hash/src/: lib.rs
fast-hash/src/hash_impls/: hash_core.rs  hash_primitives.rs  mod.rs
